package org.example;

import java.io.*;
import java.net.Socket;
import java.util.HashMap;

public class BankClient {


    public static void main(String[] args) {

    }
}
