@startuml
package java.io {
    interface Serializable {

    }
}

package java.lang {
    interface Exception {

    }
}

class Transaction implements Serializable {
    - <<get>> iban : String
    - <<get>> amount : double
    + Transaction(String, double)
    + toString() : String
    + {static} isValidIban(String) : boolean
}

class AccountManager implements Serializable {
    - accounts : HashMap<String, Double>
    + performTransaction(Transaction) : boolean
    + getBalanceForAccount(String) : double
}

note top of AccountManager: performTransaction needs\nto be synchronized!

class AccountNotFoundException extends Exception {

}

class BankServer {
    + {static} main(String[]) : void
}

class BankClient {
    + {static} main(String[]) : void
}

BankServer -- Transaction : is received by <
BankServer --> "1" AccountManager
BankClient -- Transaction : sends >
AccountManager -- AccountNotFoundException : throws >
@enduml
